# pythonetc

./: .drone.star  .drone.yml  .gitignore  LICENSE  README.md  Taskfile.yml  array.md  assert.md  assign_ids.py  atexit.md  bytearray.md  cached-property.md  chain-is.md  class-body.md  class-getitem.md  class-scope.md  codecs.md  colorsys.md  comprehension-func.md  data-descriptors.md  dedent.md  deepcopy.md  del.md  del2.md  digits.md  dunder.md  dynamic-class-attribute.md  emoji.md  enum.md  eval-order.md  eval-strategy.md  exc-info.md  f-docstrings.md  faulthandler.md  faulthandler2.md  float.md  fnmatch.md  format.md  functools-cache.md  future-annotations.md  (+64 more)
.github/workflows/: daily-builds.yml  main.yml
.task/checksum/: install-test
3.9/: decorators.md  generic-types.md  merge-dicts.md  str-removeprefix.md  unparse.md
hist/: backquotes.md  types.md
posts/: abc-abstractmethod.md  add-note.md  aiotask-context.md  array.md  assert-type.md  assert.md  async-for-and-with.md  asyncio-await-in-await.md  asyncio-create-task.md  asyncio-futures.md  asyncio-gather.md  asyncio-get-event-loop.md  asyncio-run.md  asyncio-schedule-coroutine.md  asyncio-sleep.md  asyncio-task-gc.md  asyncio-yielding-future.md  asyncio.md  atexit.md  attrs.md  bisect.md  bnf-of-bnf.md  build-system.md  bytearray.md  c3-mro.md  cached-property.md  chain-is.md  chomsky.md  choosing-subclass.md  class-body.md  class-getitem.md  class-scope.md  codecs.md  colorsys.md  compose.md  comprehension-func.md  concatenate.md  contextlib-chdir.md  contextlib-closing.md  contextmanager-decorator.md  (+183 more)
posts/3.9/: decorators.md  generic-types.md  merge-dicts.md  str-removeprefix.md  unparse.md
posts/hist/: backquotes.md  types.md
posts/sequences/: abc-abstractmethod.yaml  decorator-syntax.yaml  dict-keys.yaml  format-syntax.yaml  fsm.yaml  heapq.yaml  http-redirect.yaml  ipython-magic.yaml
posts/snippets/: f-strings.md  final.md  getitem.md  hamming.md  itertools.md  sum-frames.md  to-str-2.md  to-str.md
repls/aiosqr/: main.py
repls/getattr/: main.py
repls/heapq/: main.py
repls/multipledispatch/: main.cs
repls/signledispatch/: Main.java
repls/slice_view/: main.py
repls/strftime/: main.py
repls/unparameterizeddecorator/: main.py
repls/visitor/: main.py
sdk/: __init__.py  __main__.py  cli.py  ipython_executor.py  module.py  pages.py  pep.py  post.py  post_markdown.py  python_exec_utils.py  schema.json  sequence.py  trace.py
sdk/commands/: __init__.py  _add_ids.py  _check_all.py  _command.py  _html.py  _run_code.py  _schedule.py  _table.py  _telegram.py  _unpuplished.py
snippets/: f-strings.md  final.md  getitem.md  hamming.md  itertools.md  sum-frames.md  to-str-2.md  to-str.md
templates/: _post_line.j2  base.html.j2  index.html.j2  peps.html.j2  post.html.j2  posts.html.j2  pythons.html.j2  stdlib.html.j2  typing.html.j2
tests/sdk/: test_ipython_executor.py  test_post_markdown.py
